--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,43 @@
+.row{
+    height: auto;
+    box-shadow: 10px 10px 5px #aaaaaa;
+    width: 1000px;
+    margin-left: 180px;
+    margin-top: 150px;
+}
 
-
-.container{
+.wrapper{
+    border:0.2px solid #aaaaaa;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    border: 0.1px solid #aaaaaa;
-    height: 50px;
-    width: 800px;
-    margin-left: 250px;
-    margin-top: 100px;
-    padding: 1px;
-    /* box-shadow: 10px 10px 4px #aaaaaa; */
 }
 
-.container1{
-    display : flex;
-    flex-direction: row;
-    align-items: center;
-    border: 0.1px solid #aaaaaa;
-    border-top: none;
-    height: 50px;   
-    flex-wrap:unset; 
-    width: 802px;
-    margin-left: 250px;
-    padding: 1;
+.item1,
+.item2,
+.item3,
+.item4,
+.item5{
+    padding: 10px;
 }
-.fa-times {
-    color: white;
-    background-color: black;
-    width: 20px;
-    text-align: center;
-  }
 
-  .container .item1,
-  .container .item2,
-  .container .item3{
-      padding: 10px;
-  }
-
-
-.container .item1{
+.item1{
     flex-grow: 0.2;
 }
-.container .item2{
+.item2{
     flex-grow: 1;
 }
-
-
-.container1 .item1{
-    height: 50px;
-    flex-grow: 2.7;
+.item4{
+    flex-grow: 1.3;
+}
+.item5{
+    flex-grow: 1;
+    background-color: #d6d6d6;
 }
 
-.container1 .item2{
-    background-color: #ddd4d4dc;
-    height: 50px;
-    flex-grow: 2.3;
+.fa-times{
+    color: white;
+    background-color: black;
+    width: 17px;
+    text-align: center;
 }
-.container1 .item1 h3,
-.container1 .item2 h4{
-    margin-left: 10px;
-    margin-top: 14px;
-}
+
